--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -252,20 +252,26 @@ or variants */
 /* Dark mode toast colors */
 .dark [data-sonner-toast][data-type="success"] {
   background-color: rgb(20 83 45) !important;
-  border-color: rgb(22 101 52) !important;
-  color: rgb(187 247 208) !important;
+  border-color: rgb(34 197 94) !important;
+  color: rgb(240 253 244) !important;
 }
 
 .dark [data-sonner-toast][data-type="error"] {
   background-color: rgb(127 29 29) !important;
-  border-color: rgb(153 27 27) !important;
-  color: rgb(254 202 202) !important;
+  border-color: rgb(220 38 38) !important;
+  color: rgb(254 242 242) !important;
 }
 
 .dark [data-sonner-toast][data-type="warning"] {
   background-color: rgb(120 53 15) !important;
-  border-color: rgb(146 64 14) !important;
-  color: rgb(254 240 138) !important;
+  border-color: rgb(234 179 8) !important;
+  color: rgb(254 252 232) !important;
+}
+
+.dark [data-sonner-toast][data-type="info"] {
+  background-color: rgb(30 58 138) !important;
+  border-color: rgb(59 130 246) !important;
+  color: rgb(239 246 255) !important;
 }
 
 /* Notification Animations */
